@@ -1312,8 +1312,9 @@ name|AMRMClientAsync
 name|amRMClient
 decl_stmt|;
 comment|// In both secure and non-secure modes, this points to the job-submitter.
+annotation|@
+name|VisibleForTesting
 DECL|field|appSubmitterUgi
-specifier|private
 name|UserGroupInformation
 name|appSubmitterUgi
 decl_stmt|;
@@ -1596,8 +1597,9 @@ argument_list|>
 argument_list|()
 decl_stmt|;
 comment|// Timeline Client
+annotation|@
+name|VisibleForTesting
 DECL|field|timelineClient
-specifier|private
 name|TimelineClient
 name|timelineClient
 decl_stmt|;
@@ -2847,57 +2849,6 @@ literal|"0"
 argument_list|)
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|conf
-operator|.
-name|getBoolean
-argument_list|(
-name|YarnConfiguration
-operator|.
-name|TIMELINE_SERVICE_ENABLED
-argument_list|,
-name|YarnConfiguration
-operator|.
-name|DEFAULT_TIMELINE_SERVICE_ENABLED
-argument_list|)
-condition|)
-block|{
-comment|// Creating the Timeline Client
-name|timelineClient
-operator|=
-name|TimelineClient
-operator|.
-name|createTimelineClient
-argument_list|()
-expr_stmt|;
-name|timelineClient
-operator|.
-name|init
-argument_list|(
-name|conf
-argument_list|)
-expr_stmt|;
-name|timelineClient
-operator|.
-name|start
-argument_list|()
-expr_stmt|;
-block|}
-else|else
-block|{
-name|timelineClient
-operator|=
-literal|null
-expr_stmt|;
-name|LOG
-operator|.
-name|warn
-argument_list|(
-literal|"Timeline service is not enabled"
-argument_list|)
-expr_stmt|;
-block|}
 return|return
 literal|true
 return|;
@@ -2941,6 +2892,8 @@ throws|throws
 name|YarnException
 throws|,
 name|IOException
+throws|,
+name|InterruptedException
 block|{
 name|LOG
 operator|.
@@ -3102,32 +3055,6 @@ argument_list|(
 name|credentials
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|timelineClient
-operator|!=
-literal|null
-condition|)
-block|{
-name|publishApplicationAttemptEvent
-argument_list|(
-name|timelineClient
-argument_list|,
-name|appAttemptID
-operator|.
-name|toString
-argument_list|()
-argument_list|,
-name|DSEvent
-operator|.
-name|DS_APP_ATTEMPT_START
-argument_list|,
-name|domainId
-argument_list|,
-name|appSubmitterUgi
-argument_list|)
-expr_stmt|;
-block|}
 name|AMRMClientAsync
 operator|.
 name|CallbackHandler
@@ -3185,6 +3112,37 @@ operator|.
 name|start
 argument_list|()
 expr_stmt|;
+name|startTimelineClient
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|timelineClient
+operator|!=
+literal|null
+condition|)
+block|{
+name|publishApplicationAttemptEvent
+argument_list|(
+name|timelineClient
+argument_list|,
+name|appAttemptID
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|DSEvent
+operator|.
+name|DS_APP_ATTEMPT_START
+argument_list|,
+name|domainId
+argument_list|,
+name|appSubmitterUgi
+argument_list|)
+expr_stmt|;
+block|}
 comment|// Setup local RPC Server to accept status requests directly from clients
 comment|// TODO need to setup a protocol for client to be able to communicate to
 comment|// the RPC server
@@ -3403,31 +3361,121 @@ argument_list|(
 name|numTotalContainers
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|VisibleForTesting
+DECL|method|startTimelineClient (final Configuration conf)
+name|void
+name|startTimelineClient
+parameter_list|(
+specifier|final
+name|Configuration
+name|conf
+parameter_list|)
+throws|throws
+name|YarnException
+throws|,
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+try|try
+block|{
+name|appSubmitterUgi
+operator|.
+name|doAs
+argument_list|(
+operator|new
+name|PrivilegedExceptionAction
+argument_list|<
+name|Void
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Void
+name|run
+parameter_list|()
+throws|throws
+name|Exception
+block|{
 if|if
 condition|(
-name|timelineClient
-operator|!=
-literal|null
+name|conf
+operator|.
+name|getBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|TIMELINE_SERVICE_ENABLED
+argument_list|,
+name|YarnConfiguration
+operator|.
+name|DEFAULT_TIMELINE_SERVICE_ENABLED
+argument_list|)
 condition|)
 block|{
-name|publishApplicationAttemptEvent
-argument_list|(
+comment|// Creating the Timeline Client
 name|timelineClient
-argument_list|,
-name|appAttemptID
+operator|=
+name|TimelineClient
 operator|.
-name|toString
+name|createTimelineClient
 argument_list|()
-argument_list|,
-name|DSEvent
+expr_stmt|;
+name|timelineClient
 operator|.
-name|DS_APP_ATTEMPT_END
-argument_list|,
-name|domainId
-argument_list|,
-name|appSubmitterUgi
+name|init
+argument_list|(
+name|conf
 argument_list|)
 expr_stmt|;
+name|timelineClient
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|timelineClient
+operator|=
+literal|null
+expr_stmt|;
+name|LOG
+operator|.
+name|warn
+argument_list|(
+literal|"Timeline service is not enabled"
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+literal|null
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UndeclaredThrowableException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|YarnException
+argument_list|(
+name|e
+operator|.
+name|getCause
+argument_list|()
+argument_list|)
+throw|;
 block|}
 block|}
 annotation|@
@@ -3485,6 +3533,32 @@ name|InterruptedException
 name|ex
 parameter_list|)
 block|{}
+block|}
+if|if
+condition|(
+name|timelineClient
+operator|!=
+literal|null
+condition|)
+block|{
+name|publishApplicationAttemptEvent
+argument_list|(
+name|timelineClient
+argument_list|,
+name|appAttemptID
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|DSEvent
+operator|.
+name|DS_APP_ATTEMPT_END
+argument_list|,
+name|domainId
+argument_list|,
+name|appSubmitterUgi
+argument_list|)
+expr_stmt|;
 block|}
 comment|// Join all launched threads
 comment|// needed for when we time out
@@ -5574,42 +5648,19 @@ argument_list|)
 expr_stmt|;
 try|try
 block|{
-name|ugi
-operator|.
-name|doAs
-argument_list|(
-operator|new
-name|PrivilegedExceptionAction
-argument_list|<
-name|TimelinePutResponse
-argument_list|>
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|TimelinePutResponse
-name|run
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-return|return
 name|timelineClient
 operator|.
 name|putEntities
 argument_list|(
 name|entity
 argument_list|)
-return|;
-block|}
-block|}
-argument_list|)
 expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|Exception
+name|YarnException
+decl||
+name|IOException
 name|e
 parameter_list|)
 block|{
@@ -5627,15 +5678,6 @@ operator|.
 name|toString
 argument_list|()
 argument_list|,
-name|e
-operator|instanceof
-name|UndeclaredThrowableException
-condition|?
-name|e
-operator|.
-name|getCause
-argument_list|()
-else|:
 name|e
 argument_list|)
 expr_stmt|;
@@ -5746,42 +5788,19 @@ argument_list|)
 expr_stmt|;
 try|try
 block|{
-name|ugi
-operator|.
-name|doAs
-argument_list|(
-operator|new
-name|PrivilegedExceptionAction
-argument_list|<
-name|TimelinePutResponse
-argument_list|>
-argument_list|()
-block|{
-annotation|@
-name|Override
-specifier|public
-name|TimelinePutResponse
-name|run
-parameter_list|()
-throws|throws
-name|Exception
-block|{
-return|return
 name|timelineClient
 operator|.
 name|putEntities
 argument_list|(
 name|entity
 argument_list|)
-return|;
-block|}
-block|}
-argument_list|)
 expr_stmt|;
 block|}
 catch|catch
 parameter_list|(
-name|Exception
+name|YarnException
+decl||
+name|IOException
 name|e
 parameter_list|)
 block|{
@@ -5813,15 +5832,6 @@ operator|.
 name|toString
 argument_list|()
 argument_list|,
-name|e
-operator|instanceof
-name|UndeclaredThrowableException
-condition|?
-name|e
-operator|.
-name|getCause
-argument_list|()
-else|:
 name|e
 argument_list|)
 expr_stmt|;
