@@ -1,0 +1,199 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+DECL|package|org.apache.hadoop.yarn.applications.distributedshell
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|applications
+operator|.
+name|distributedshell
+package|;
+end_package
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|UserGroupInformation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|client
+operator|.
+name|api
+operator|.
+name|impl
+operator|.
+name|TimelineClientImpl
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|conf
+operator|.
+name|YarnConfiguration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_class
+DECL|class|TestDSAppMaster
+specifier|public
+class|class
+name|TestDSAppMaster
+block|{
+annotation|@
+name|Test
+DECL|method|testTimelineClientInDSAppMaster ()
+specifier|public
+name|void
+name|testTimelineClientInDSAppMaster
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ApplicationMaster
+name|appMaster
+init|=
+operator|new
+name|ApplicationMaster
+argument_list|()
+decl_stmt|;
+name|appMaster
+operator|.
+name|appSubmitterUgi
+operator|=
+name|UserGroupInformation
+operator|.
+name|createUserForTesting
+argument_list|(
+literal|"foo"
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"bar"
+block|}
+argument_list|)
+expr_stmt|;
+name|Configuration
+name|conf
+init|=
+operator|new
+name|YarnConfiguration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|TIMELINE_SERVICE_ENABLED
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|appMaster
+operator|.
+name|startTimelineClient
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|appMaster
+operator|.
+name|appSubmitterUgi
+argument_list|,
+operator|(
+operator|(
+name|TimelineClientImpl
+operator|)
+name|appMaster
+operator|.
+name|timelineClient
+operator|)
+operator|.
+name|getUgi
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
